js/js.translator/testData/incremental/invalidation/renamePackageWithConsumer/lib1/l1.0.kt
package sample.a

fun foo(): Int = 0
